# Terment-v2

./: .gitignore  confi.toml.example  config.py  main.py  pyproject.toml
terment/: agent.py  cli.py  config.py  tools.py
