[project]
name = "terment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "firecrawl>=4.32.1",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.3.1",
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "langchain-openrouter>=0.2.6",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "rich>=15.0.0",
]
